Fix build failures