@@ -544,7 +544,7 @@ public class ResourceWebHandler implements WebHandler, InitializingBean {
 
 	private static String decode(String path) {
 		try {
-			return URLDecoder.decode(path, StandardCharsets.UTF_8);
+			return URLDecoder.decode(path, "UTF-8");
 		}
 		catch (Exception ex) {
 			return "";
