@@ -705,7 +705,7 @@ public class ResourceHttpRequestHandler extends WebContentGenerator
 
 	private static String decode(String path) {
 		try {
-			return URLDecoder.decode(path, StandardCharsets.UTF_8);
+			return URLDecoder.decode(path, "UTF-8");
 		}
 		catch (Exception ex) {
 			return "";
